--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Lists#index</h1>
 <p>Find me in app/views/lists/index.html.erb</p>
+<%= link_to 'create a new list', new_list_path, class: "btn btn-primary"  %>
+
+<% @lists.each do  |list|%>
+<ul>
+<%= list.id %>
+<%= link_to list.name, list_path(list) %>
+</ul>
+<% end %>
