--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Lists#show</h1>
+<h1><%= @list.name  %></h1>
+
 <p>Find me in app/views/lists/show.html.erb</p>
+
+<%= link_to 'add a movie', movies_path, class: "btn btn-primary"  %>
