minor change removing some puts from seed file

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,5 +4,6 @@
 <ul>
 <%= movie.id %>
 <%= link_to movie.title, movie_path(movie) %>
+<%# <%= link_to 'add this movie', movie_path(movie), class: "btn btn-primary" %>
 </ul>
 <% end %>
