--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,9 +1,1 @@
-<h1>Movies#index</h1>
-<p>Find me in app/views/movies/index.html.erb</p>
-<% @movies.each do  |movie|%>
-<ul>
-<%= movie.id %>
-<%= link_to movie.title, movie_path(movie) %>
-<%# <%= link_to 'add this movie', movie_path(movie), class: "btn btn-primary" %>
-</ul>
-<% end %>
+<%= render "shared/list" %>
